src/objects/FieloPLT__Triggers__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>It allows you to disable default Fielo Triggers.</description>
    <fields>
        <fullName>FieloPLT__Member__c</fullName>
        <defaultValue>true</defaultValue>
        <description>It disables Member trigger.</description>
        <inlineHelpText>When ticked, it disables Member trigger.</inlineHelpText>
        <label>Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__RedemptionItem__c</fullName>
        <defaultValue>true</defaultValue>
        <description>It disables Redemption Item trigger.</description>
        <inlineHelpText>When ticked, it disables Redemption Item trigger.</inlineHelpText>
        <label>Redemption Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Redemption__c</fullName>
        <defaultValue>true</defaultValue>
        <description>It disables Redemption trigger.</description>
        <inlineHelpText>When ticked, it disables Redemption trigger.</inlineHelpText>
        <label>Redemption</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Transaction__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Transaction</label>
        <type>Checkbox</type>
    </fields>
    <label>Triggers</label>
</CustomObject>